--- a/styles/styles-index.css
+++ b/styles/styles-index.css
@@ -375,11 +375,11 @@ input#giamGia{
     grid-template-rows: auto auto auto auto auto auto;
 }
 
-#list-img-news>div:first-child{
+#list-img-news>a:first-child{
     grid-column: 1 / 3;
     grid-row: 1 / 2;
 }
-#list-img-news>div:last-child{
+#list-img-news>a:last-child{
     grid-column: 3 / 5;
     grid-row: 2;
 }
